@@ -570,6 +570,7 @@ PHP 8.4 UPGRADE NOTES
   . SOCK_CONN_DGRAM (NetBSD only).
   . SOCK_DCCP (NetBSD only).
   . TCP_SYNCNT (Linux only).
+  . SO_EXCLBIND (Solaris/Illumos only).
 
 - Sodium:
   . SODIUM_CRYPTO_AEAD_AEGIS128L_KEYBYTES
