@@ -195,6 +195,8 @@ PHP                                                                        NEWS
   . Added multicast group support for ipv4 on FreeBSD. (jonathan@tangential.ca)
   . Added the TCP_SYNCNT constant for Linux to set number of attempts to send
     SYN packets from the client. (David Carlier)
+  . Added the SO_EXCLBIND constant for exclusive socket binding on illumos/solaris. 
+    (David Carlier)
 
 - SNMP:
   . Removed the deprecated inet_ntoa call support. (David Carlier)
